# Voicebox

./: .gitignore  CLAUDE.md  README.md  app.go  go.mod  go.sum  main.go  voicebox.example.json  wails.json  window_darwin.go  window_other.go
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: settings-form.tsx  title-bar.tsx
frontend/src/hooks/: use-config.ts  use-voicebox.ts
internal/accessibility/: context.go  context_darwin.go  context_other.go
internal/audio/: autorelease_darwin.go  autorelease_other.go  capture.go
internal/config/: config.go  config_test.go
internal/formatter/: cloud.go  local.go  provider.go
internal/hotkey/: hotkey.go  hotkey_darwin.go  hotkey_other.go  hotkey_test.go
internal/pipeline/: pipeline.go
internal/stt/: cloud.go  local.go  provider.go
server/: formatter.go  go.mod  handler.go  handler_test.go  main.go  prompt.go  stt.go  wav.go  wav_test.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  audio.rs  config.rs  hotkey.rs  lib.rs  main.rs  pipeline.rs
worker/: package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
worker/src/: index.ts  prompt.test.ts  prompt.ts  session.ts  types.ts  wav.test.ts  wav.ts
worker/test/: prompt.test.ts  wav.test.ts
